# retro_rl

./: .gitignore  ADDING_GAMES.md  AGENTS.md  EMULATOR_FEATURES.md  MULTI_GAME_SETUP.md  README.md  WAYPOINT_WORKFLOW.md  pyproject.toml  setup.sh
donkey_kong_country/: PLAN.md  README.md  autosplit.py  level_names.json  run_bot.py  run_bot.sh
fighters_common/: AGENTS.md  __init__.py  combo_wrapper.py  create_all_states.py  fighting_env.py  game_configs.py  menu_nav.py  random_opponent_env.py  run_bot.py  train_all.sh  train_ppo.py
harvest/: .agents.md  .gitignore  AGENTS.md  CLAUDE.md  HAMMER_MODE.md  IMPROVEMENTS.md  PLAN.md  README.md  ROM_SETUP.md  SESSION_SUMMARY.md  building_navigation.py  controls.py  crop_planter.py  daily_chain.py  day_plan.py  day_planner.py  debug_carry.py  debug_carry_v2.py  farm_clearer.py  farm_map.py  farm_map_full_dump.txt  farm_map_map.txt  farm_map_tilemap.txt  fence_flow.py  find_ram.py  get_player_pos.py  grass_planter.py  harness.py  harness_example.py  harness_graph.py  harness_runtime.py  harvest_bot.py  locate_map.py  make_states.sh  map_analyzer.py  map_dump_pond.py  pyproject.toml  record_pond_tasks.sh  record_till_plant.py  recorded_task.py  (+13 more)
mortal_kombat/: AGENTS.md  CLAUDE.md  README.md  SPEEDRUN_PLAN.md  benchmark_characters.py  cheat_extractor.py  manual_state_creator.py  match_manager.py  model_registry.py  purge_models.py  record_montage.py  record_zoom_montage.py  speedrun_multimodel.py  speedrun_test.py  train_speedrun.py  validate_single_state.py  validate_states.py  watch.py
mortal_kombat_ii/: AGENTS.md  watch.sh  (+12 more)
(+460 files in other folders)
