[project]
name = "retro_rl"
version = "0.1.0"
description = "Retro gaming RL environment harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pygame>=2.6.1",
    "stable-retro>=0.9.8",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",
    "gymnasium>=1.0.0",
    "opencv-python>=4.0.0",
]
